# search-engine

./: .gitignore  README.md  pyproject.toml
benchmark/: qrels.tsv  queries.tsv
benchmark/crawl/: README.md  monitor.py
benchmark/retrieval/: pyproject.toml  qrels.tsv  queries.tsv
benchmark/retrieval/src/tuebingen_benchmark/: extract.py  paths.py  runs.py
benchmark/runs/crawl-20260707-1558/: 20260709-132211-bm25-baseline-15q.json  20260709-133333-stopwords.json  20260709-134912-proximity.json
benchmark/src/tuebingen_benchmark/: main.py  metrics.py  paths.py  runs.py
benchmark/tests/: test_benchmark.py
client/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  MapView.tsx  UniverseView.tsx  index.css  types.ts
client/src/galaxy/: BloomEffect.tsx  GalaxyField.tsx  ResultStars.tsx  Scene.tsx  WarpTunnel.tsx  categories.ts  discTexture.ts
crawl/: README.md  pyproject.toml  seeds.pilot.toml  seeds.toml
crawl/src/tuebingen_crawler/: crawl_runner.py  crawler.py  dedup.py  extract.py  fetcher.py  frontier.py  heuristic.py  host_scheduler.py  lease_processor.py  link_classifier.py  link_evaluation.py  main.py  models.py  page_classifier.py  page_evaluation.py  page_store.py  paths.py  report.py  save_pages.py  scheduler.py  semantic.py  sitemap.py  storage.py  stores.py  tuebingen_terms.py  urls.py  verdict_models.py
crawl/tests/: test_crawler.py  test_dedup.py  test_extract.py  test_fetcher.py  test_frontier.py  test_heuristic.py  test_link_classifier.py  test_page_classifier.py  test_paths.py  test_save_pages.py  test_scheduler.py  test_sitemap.py  test_storage.py  test_stores.py  test_urls.py  test_verdict_models.py
crawler/: crawler.go  download_tuepedia.py  go.mod
crawler/src/tuebingen_crawler/: crawler.py  main.py  models.py  storage.py  urls.py
data/: README.md
docs/: DECISIONS.md
docs/report/: bibliography.bib  report.tex
labeling/: README.md  pyproject.toml
legacy/: README.md
legacy/rust-search/src/: html.rs  indexer.rs  main.rs  tokenizer.rs
search/: README.md  pyproject.toml
search/src/tuebingen_search/: api.py  batch.py  cli.py  data_fetch.py  embeddings.py  html.py  indexer.py  load_pages.py  main.py  models.py  paths.py  scoring.py  search.py  storage.py  tokenizer.py
search/tests/: test_api.py  test_batch.py  test_bm25f.py  test_cli.py  test_data_fetch.py  test_embeddings.py  test_html.py  test_indexer.py  test_load_pages.py  test_search.py  test_tokenizer.py
tuebingen_search/: Cargo.toml
tuebingen_search/src/: cli.rs  indexer.rs  main.rs  search.rs
verdict-ml/: README.md  pyproject.toml
verdict-ml/artifacts/: link_metrics.json  link_validation_predictions.jsonl  link_verdict.joblib  page_metrics.json  page_validation_predictions.jsonl  page_verdict.joblib
verdict-ml/tests/: test_page_features.py
(+6 files in other folders)
