[project]
name = "crawler"
version = "0.1.0"
description = "Link crawler which fetches html files based on given url."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "selectolax>=0.4.10",
    "pydantic>=2.13.4",
    "verdict-ml",
]

[project.scripts]
crawl = "tuebingen_crawler.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
verdict-ml = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/tuebingen_crawler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
