[project]
name = "tuebingen-search"
version = "0.1.0"
description = "Small search engine for HTML files"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "msgpack>=1.1.0",
    "numpy>=2.4.6",
    "selectolax>=0.4.10",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
data-fetch = "tuebingen_search.data_fetch:main"
index = "tuebingen_search.main:index_main"
search = "tuebingen_search.main:search_main"
embed = "tuebingen_search.main:embed_main"

[tool.hatch.build.targets.wheel]
packages = ["src/tuebingen_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
